# CourseWork5

./: .gitignore  README.md  cfg.py  cls.py  main.py  pyproject.toml  utils.py
