[tool.poetry]
name = "coursework5"
version = "0.1.0"
description = ""
authors = ["Sergey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
config = "^0.5.1"
configparser = "^6.0.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
